--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,7 +1,16 @@
-.wrapper {
- width: 90%;
- }
-  
- @media only screen and (min-width: 1108px) {
- .wrapper { width: 960px; }
- }
+ @media only screen and (max-width: 1108px) {
+  .wrapper {
+    width: 90%;
+  }
+
+  #social {
+    position: absolute;
+    top: 82px;
+    right: 4px;
+    width: auto;
+  }
+
+  #social a {
+    display: inline-block;
+  }
+}
