--- a/css/responsive.css
+++ b/css/responsive.css
@@ -15,3 +15,27 @@
   }
 }
 
+@media only screen and (max-width:900px) {
+  body {
+    font-size: 85%;
+  }
+
+  #logo h1 {
+    width: 35px;
+    height: 35px;
+  }
+
+  #logo h2{
+    font-size: 2.2em;
+  }
+
+  #social {
+    top: 72px;
+  }
+
+  .col-3 p {
+    -moz-column-count: 2;
+    -webkit-column-count: 2;
+    column-count: 2;
+  }
+}
