Automatically backed up by Learn

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -40,3 +40,25 @@
   }
 }
 
+@media only screen and (max-width: 750px) {
+  .col-1, .col-2, .col-3 {
+    width: 100%;
+    margin-left: 0;
+    float: none;
+  }
+
+  .border-right {
+    border: 0;
+  }
+
+  #details div {
+    height: auto;
+    /*padding-bottom: 20px;*/
+  }
+
+  .col-3 p {
+    -moz-column-count: 1;
+    -webkit-column-count: 1;
+    column-count: 1;
+  }
+}
