Automatically backed up by Learn

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -62,3 +62,25 @@
     column-count: 1;
   }
 }
+
+
+@media only screen and (max-width: 700px) {
+  #navbar nav a {
+    display: none;
+  }
+
+  #navbar nav a.menu-icon {
+    display: block;
+    float: right;
+    font-size: 1.5em;
+    padding: 10px 20px;
+    width: auto;
+  }
+
+  #logo {
+    padding: 60px 0 0;
+  }
+
+  #social {
+    top: 60px;
+  }
